--- a/public/css/style-contacts.css
+++ b/public/css/style-contacts.css
@@ -1,3 +1,7 @@
+html {
+    margin: 40px auto;
+    text-align: center;
+}
 body {
     margin:0; 
     padding:0;
@@ -5,6 +9,23 @@ body {
     position:relative;
     scroll-behavior: smooth;
 }
+
+.btn-facebook {
+    background: #3B5998;
+    border-radius: 0;
+    color: #fff;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #263961;
+}
+.btn-facebook:link, .btn-facebook:visited {
+    color: #fff;
+}
+.btn-facebook:active, .btn-facebook:hover {
+    background: #263961;
+    color: #fff;
+}
+
 .header {
     height:70px;
     padding:0;
